--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,36 +4,39 @@
     margin-right: 1em;
 }
 
-input[type=password].yellow-input:not(.browser-default),
-input[type=email].yellow-input:not(.browser-default) {
+.nav-bar {
+    padding: 0 2rem;
+}
+
+.auth-form .input-field label {
+    color: #fff;
+}
+
+.auth-form .input-field:focus + label {
+    color: #fff;
+}
+
+.auth-form .input-field input[type=email],
+.auth-form .input-field input[type=password] {
     border-bottom: 1px solid #fff;
     box-shadow: 0 1px 0 0 #fff;
     color: #fff;
 }
 
-input[type=email].invalid {
-    color: red;
-    border-bottom: 1px solid red;
-    box-shadow: 0 1px 0 0 red;
-}
-
-input[type=password].yellow-input + label,
-input[type=email].yellow-input + label {
+.auth-form .input-field input[type=email]:focus,
+.auth-form .input-field input[type=password]:focus {
+    border-bottom: 1px solid #fff;
+    box-shadow: 0 1px 0 0 #fff;
     color: #fff;
 }
 
-input[type=email].yellow-input:focus + label,
-input[type=password].yellow-input:focus + label {
-    color: #ffeb3b;
-}
-
-input[type=password].yellow-input:focus,
-input[type=email].yellow-input:focus {
-    border-bottom: 1px solid #ffeb3b;
-    box-shadow: 0 1px 0 0 #ffeb3b;
+.auth-form .input-field input[type=email]:focus + label,
+.auth-form .input-field input[type=password]:focus + label {
     color: #fff;
 }
 
-.nav-bar {
-    padding: 0 2rem;
+.auth-form .input-field input[type=email].valid,
+.auth-form .input-field input[type=password].valid {
+    border-bottom: 1px solid #fff;
+    box-shadow: 0 1px 0 0 #fff;
 }
