--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,12 @@
     padding: 0 2rem;
 }
 
+.loader-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+}
+
 .auth-form .input-field label {
     color: #fff;
 }
